Fix content overflow bug and refine layout
This commit fixes the CSS issue causing content to overflow the header. Changes were also made to the product-teaser.css layout for better responsiveness and appearance by centrally aligning items and modifying image dimensions. Added utility function 'shortenText' within js/util.js for text truncation. The basket.html & basket.js have been adjusted to enhance visibility of basket items.

--- a/css/components/product-teaser.css
+++ b/css/components/product-teaser.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 1rem;
 
     .product-teaser {
         max-width: 350px;
+        margin-top: 1rem;
 
         button {
             margin-left: 1rem;
@@ -13,8 +15,9 @@
 
         img {
             width: 350px;
-            height: 400px;
+            height: auto;
             object-fit: contain;
+            aspect-ratio: 1/1;
         }
     }
 }
