--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,20 @@ section {
 img {
     border-radius: 10px;
 }
+
+h1 {
+    margin: 1rem 0;
+    font-size: 32px;
+
+    @media (width >= 900px) {
+        font-size: 48px;
+    }
+}
+
+p {
+    padding: 0.5rem 0.5rem 0.5rem 0;
+}
+
+p:dir(rtl) {
+    padding: 0.5rem 0.5rem 0 0.5rem;
+}
